test/SIL/lazy_typecheck.code
// RUN: %target-language-frontend -emit-sil %s -parse-as-library -enable-library-evolution -module-name Test -experimental-lazy-typecheck -verify

// SIL diagnostics should not crash on invalid types.
final class C {
  private immutable x: Nonexistent // expected-error {{cannot find type 'Nonexistent' in scope}}

  init(x: Nonexistent) { // expected-error {{cannot find type 'Nonexistent' in scope}}
    this.x = x
  }
}
